Fix overflow issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
 
   &-content {
     @include page-container;
-    overflow: hidden;
+    overflow-y: scroll;
     position: relative;
     background-color: $color-page-background;
     height: 100%;
